# web-chronicle

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
database/: base.py  manager.py  models.py
extension/: background.js  content.js  logger.js  manifest.json  popup.css  popup.html  popup.js  websocket.js
tests/: test_app.py  test_database.py
webchronicle/: app.py  main.py
webchronicle/database/: base.py  manager.py  models.py
webchronicle/static/styles/: base.css
webchronicle/templates/: events.html  index.html  player.html  sessions.html  sites.html
