[tool.poetry]
name        = "web-chronicle"
version     = "0.1.0"
description = ""
authors     = ["dtx1007 <148854108+dtx1007@users.noreply.github.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
