[tool.poetry]
name        = "webchronicle"
version     = "0.1.0"
description = ""
authors     = ["dtx1007 <148854108+dtx1007@users.noreply.github.com>"]
readme      = "README.md"

[tool.poetry.dependencies]
python     = "^3.12"
flask      = "^3.0.3"
sqlalchemy = "^2.0.36"
flask-sock = "^0.7.0"
python-dateutil = "^2.9.0.post0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ruff       = "^0.6.8"
pre-commit = "^3.8.0"
mypy       = "^1.11.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.mypy]
python_version         = "3.12"
warn_unused_configs    = true
warn_no_return         = true
disallow_untyped_defs  = true
warn_unused_ignores    = true
warn_redundant_casts   = true
warn_unreachable       = true
show_error_context     = true
ignore_missing_imports = true


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
